Debug for deployment

--- a/Back/fastapi-backend/.env
+++ b/Back/fastapi-backend/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgresql://todoapp_58p7_user:UuHOCqgYsIgAljSN2ZTuB4YIPzXQdbi5@dpg-cvtmpo24d50c73ak73s0-a.oregon-postgres.render.com/todoapp_58p7
+DATABASE_URL=postgresql://drieo:7GlFZ7o8nsFRfXPmCbvNsQw3ZvP0A7dp@dpg-cvto7249c44c738olemg-a.oregon-postgres.render.com/todoapp_pe57
